--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/JayJayDee/Chatpot-Room-Server#readme",
   "devDependencies": {
+    "@types/express": "^4.16.0",
     "@types/lodash": "^4.14.119",
+    "@types/mysql": "^2.15.5",
     "@types/node": "^10.12.18",
     "jest": "^23.6.0",
     "nodemon": "^1.18.7",
