--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.0",
+    "@types/jest": "^23.3.12",
     "@types/lodash": "^4.14.119",
     "@types/mysql": "^2.15.5",
     "@types/node": "^10.12.18",
