--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/lodash": "^4.14.119",
     "@types/mysql": "^2.15.5",
     "@types/node": "^10.12.18",
+    "@types/redis": "^2.8.11",
     "@types/request-promise-native": "^1.0.15",
     "jest": "^23.6.0",
     "nodemon": "^1.18.7",
@@ -44,6 +45,7 @@
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mysql": "^2.16.0",
+    "redis": "^2.8.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "smart-factory": "^1.0.11"
