--- a/src/swagger/roulette.yaml
+++ b/src/swagger/roulette.yaml
@@ -3,13 +3,13 @@ tags:
   name: Roulette
   description: 랜덤 채팅 신청/취소 APIs
 
-/roulette:
+/roulette/{member_token}/request:
   post:
     summary: 새로운 랜덤채팅 신청.
     tags: [Roulette]
     parameters:
       - name: member_token
-        in: formData
+        in: path
         required: true
         type: string
         description: 회원 token
@@ -32,7 +32,7 @@ tags:
         description: MAX_ROULETTE_EXCEED = 최대 랜덤채팅 신청 갯수 도달.
 
 
-/roulette/{member_token}/status:
+/roulette/{member_token}/requests:
   get:
     summary: 신청하거나 매칭된 모든 랜덤채팅 상태 조회
     tags: [Roulette]
@@ -50,3 +50,24 @@ tags:
           items:
             $ref: '#/definitions/RouletteStatus'
 
+
+/roulette/{member_token}/request/{request_id}:
+  delete:
+    summary: 신청하거나 매칭된 모든 랜덤채팅 상태 조회
+    tags: [Roulette]
+    parameters:
+      - name: member_token
+        in: path
+        required: true
+        type: string
+        description: 회원 token
+      - name: request_id
+        in: path
+        required: true
+        type: string
+        description: 랜덤채팅 요청 ID
+    responses:
+      200:
+        description: 성공
+        schema:
+          type: object
